--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,20 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/compress": "^6.1.1",
+    "@fastify/helmet": "^10.0.2",
+    "@fastify/static": "^6.5.0",
+    "@nestjs/axios": "^1.0.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.2.0",
+    "@nestjs/platform-fastify": "^9.2.0",
+    "@nestjs/swagger": "^6.1.3",
+    "@nestjs/throttler": "^3.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "nestjs-i18n": "^9.2.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
