--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
-    "next": "13.0.3",
+    "axios": "^1.1.3",
+    "follow-redirects": "^1.15.2",
+    "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stream-http": "^3.2.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "@types/follow-redirects": "^1.14.1",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
